gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-sha512_sm_x86_dg.rs
//@ only-x86_64
#[target_feature(enable = "sha512")]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
unsafe fn foo() {}

fn main() {}

